# official

./: LICENSE  conftest.py  pyproject.toml  summarization.py
analyze_webpage_content/: analyze_webpage_content.py  test_analyze_webpage_content.py
disk_usage/: disk_usage.py  test_disk_usage.py
extract_info_from_webpage/: analyze_webpage_content.py  test_analyze_webpage_content.py
extract_information_from_webpage/: extract_information_from_webpage.py  test_extract_information_from_webpage.py
filesystem/: delete_file.py  list_files.py  read_file.py
get_webpage_html_content/: get_webpage_html_content.py  test_get_webpage_html_content.py
google_search/: google_search.py  test_google_search.py
http_request/: http_request.py
os_info/: os_info.py
wikipedia/: test_wikipedia.py  wikipedia.py
wikipedia_summarize/: __init__.py  test_wikipedia_summarize.py  wikipedia.py  wikipedia_summarize.py
wolframalpha_query/: test_wolframalpha_query.py  wolframalpha_query.py
write_python_code/: write_python_file.py
write_python_file/: test_write_python_file.py  write_python_file.py
